# py-shelly-dimmer2

./: LICENSE.txt  README.md  pyproject.toml
src/models/: __init__.py  light.py
src/models/status/: __init__.py  cloud.py  inputs.py  meter.py  mqtt.py  temperature.py  update.py  wifi_status.py
src/shelly/: __init__.py  dimmer2.py  main.py  mqtt_stuff.py  scheduling.py
