[project]
name = "shelly"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jesse Harwin", email = "jesse@jharwin.com" }
]
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.7",
    "loguru>=0.7.2",
    "orjson>=3.10.7",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.8.2",
]
readme = "README.md"
requires-python = ">= 3.12"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.8.0",
    "pylint>=3.2.6",
    "flake8-pyproject>=1.2.3",
    "ruff>=0.6.1",
    "ruff-lsp>=0.0.55",
    "pyright>=1.1.376",
    "pyproject-flake8>=7.0.0",
    "datamodel-code-generator[debug]>=0.25.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/shelly"]
